[fix](cloud) Preserve recreated compute group mapping
Related PR: #67913

Problem Summary: Recreated or renamed compute groups can lose their name mapping when stale groups are removed or delayed metadata snapshots are applied.

Reconcile names for accepted physical and virtual groups, and remove only mappings owned by an obsolete group. Include the PR's unit and cloud regression coverage.

- Test: mvn checkstyle:check -pl fe-core (passed, 0 violations)
- Test: ./run-fe-ut.sh --run org.apache.doris.cloud.catalog.CloudClusterCheckerTest,org.apache.doris.cloud.catalog.CloudInstanceStatusCheckerTest,org.apache.doris.cloud.system.CloudSystemInfoServiceTest (blocked in fe-common compilation by generated Thrift Java type argument errors)
- Behavior changed: Yes
- Does this need documentation: No